Issue #3265651 by agami4: Decrease z-index for the emoji-trigger

--- a/modules/social_features/social_emoji/assets/css/social_emoji.scss
+++ b/modules/social_features/social_emoji/assets/css/social_emoji.scss
@@ -6,12 +6,13 @@
   position: absolute;
   right: .625rem;
   bottom: .625rem;
-  z-index: 10;
+  z-index: 1;
 
   font-size: 0;
 
-  background: transparent url('../icons/icon-emoji.svg') no-repeat center;
   cursor: pointer;
+
+  background: transparent url('../icons/icon-emoji.svg') no-repeat center;
 }
 
 .emoji-picker.tooltip {
